# NBA-game-analyzer

./: .gitignore  README.md  claude.txt  design.txt  pyproject.toml  stats.txt
.github/workflow/: pytest.yml
data/: Atlanta Hawks_data.csv
src/nba_game_predictor/: const.py  main.py  statistics.py
tests/: test_get_game_ids.py  test_get_team_ids.py  test_parse_dates.py  test_parse_game_ids.py  test_parse_opponents.py  test_parse_season.py  test_parse_team_ids.py
tests/test_data/: nba_schedule.json  nba_teams.json
