[project]
name = "nba-game-analyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"